--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.serialization.fail-on-empty-beans=false
+server.error.include-message=always
